@@ -1,4 +1,4 @@
-/* $Id: window-copy.c,v 1.46 2009-01-27 20:22:33 nicm Exp $ */
+/* $Id: window-copy.c,v 1.47 2009-01-27 23:35:44 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -118,6 +118,20 @@ window_copy_free(struct window_pane *wp)
 }
 
 void
+window_copy_pageup(struct window_pane *wp)
+{
+	struct window_copy_mode_data	*data = wp->modedata;
+	struct screen			*s = &data->screen;
+	
+	if (data->oy + screen_size_y(s) > screen_hsize(&wp->base))
+		data->oy = screen_hsize(&wp->base);
+	else
+		data->oy += screen_size_y(s);
+	window_copy_update_selection(wp);
+	window_copy_redraw_screen(wp);
+}
+     
+void
 window_copy_resize(struct window_pane *wp, u_int sx, u_int sy)
 {
 	struct window_copy_mode_data	*data = wp->modedata;
@@ -156,12 +170,7 @@ window_copy_key(struct window_pane *wp, struct client *c, int key)
 		window_copy_cursor_down(wp);
 		return;
 	case MODEKEY_PPAGE:
-		if (data->oy + screen_size_y(s) > screen_hsize(&wp->base))
-			data->oy = screen_hsize(&wp->base);
-		else
-			data->oy += screen_size_y(s);
-		window_copy_update_selection(wp);
-		window_copy_redraw_screen(wp);
+		window_copy_pageup(wp);
 		break;
 	case MODEKEY_NPAGE:
 		if (data->oy < screen_size_y(s))
