@@ -1,5 +1,7 @@
 27 January 2009
 
+* -u flag to scroll-mode and copy-mode to start scrolled one page
+   up. scroll-mode -u is bound to prefix,page-up (ppage) by default.
 * Allow status, mode and message attributes to be changed by three new options:
   status-attr, mode-attr, message-attr. A comma-separataed list is accepted
   containing: bright, dim, underscore, blink, reverse, hidden, italics, for
@@ -1025,7 +1027,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.237 2009-01-27 20:22:33 nicm Exp $
+$Id: CHANGES,v 1.238 2009-01-27 23:35:44 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
